--- a/carpool/templates/includes/price.html
+++ b/carpool/templates/includes/price.html
@@ -1,6 +1,13 @@
 	<style>
 html {
   scroll-behavior: smooth;
+
+}
+.col-silver{
+	color:#676767
+}
+.col-gold{
+	color:#b8860b
 }
 	</style>
   <section class="ftco-section bg-light">
@@ -24,9 +31,9 @@ html {
 	         
 	     		<p class="price" >INTERIOR+EXTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">370</a></b></b></p>
 				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">350</a></b></b></p>
-				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">2000</a></b></b></p>
-				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">3300</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">2000</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">3300</a></b></b></p>
 	            </div>
 
 	            <a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
@@ -45,9 +52,9 @@ html {
 	         
 				<p class="price" >INTERIOR+EXTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">370</a></b></b></p>
 				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">400</a></b></b></p>
-				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">2500</a></b></b></p>
-				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">3500</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">2500</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">3500</a></b></b></p>
 
 	            
 	            </div>
@@ -68,9 +75,9 @@ html {
 	         
 	            <p class="price" >INTERIOR+EXTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">370</a></b></b></p>
 				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">430</a></b></b></p>
-				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">3000</a></b></b></p>
-				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">3800</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">300</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">3000</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">3800</a></b></b></p>
 	            </div>
 
 	            <a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
@@ -89,9 +96,9 @@ html {
 	         
 	           <p class="price" >INTERIOR+EXTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">370</a></b></b></p>
 				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">350</a></b></b></p>
-				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">300</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup><b><a class="number" href="#section1">4000</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">4500</a></b></b></p>
 
 	            
 	            </div>
@@ -118,17 +125,15 @@ html {
 	             <br>
 				<div class="pricing-text">
 	         
-	            <p class="price" >INTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">EXTERIOR WASH<b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">REMOVING WATER STAIN <b >&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
+	            <p class="price col-silver !important" ><b >Sliver Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> </b><b><a class="number" href="#section2">750</a></b></p>
+				<p>FOUR INTERIOR + EXTERIOR WASH</p>
+				<p class="price col-gold !important"><b >Gold Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  </b><b><a class="number" href="#section2">950</a></b></p>
+				<p>THREE INTERIOR + EXTERIOR AND ONE COMPLETE SUPERIOR WASH (Ramp Wash) </p>
 
 	            
 	            </div>
 
-	           <a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	           <a href="#section2" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
@@ -142,16 +147,14 @@ html {
 	            <br>
 				<div class="pricing-text">
 	         
-	           <p class="price" >INTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">EXTERIOR WASH<b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">REMOVING WATER STAIN <b >&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-	            
+	             <p class="price col-silver !important" ><b >Sliver Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> </b><b><a class="number" href="#section2">900</a></b></p>
+				<p>FOUR INTERIOR + EXTERIOR WASH</p>
+				<p class="price col-gold !important"><b >Gold Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  </b><b><a class="number" href="#section2">1110</a></b></p>
+				<p>THREE INTERIOR + EXTERIOR AND ONE COMPLETE SUPERIOR WASH (Ramp Wash) </p>
+
 	            </div>
 
-	           <a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	           <a href="#section2" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
@@ -166,16 +169,13 @@ html {
 	             <br>
 				<div class="pricing-text">
 	         
-	            <p class="price" >INTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">EXTERIOR WASH<b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">REMOVING WATER STAIN <b >&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-
+	             <p class="price col-silver !important" ><b >Sliver Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> </b><b><a class="number" href="#section2">1050</a></b></p>
+				<p>FOUR INTERIOR + EXTERIOR WASH</p>
+				<p class="price col-gold !important"><b >Gold Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  </b><b><a class="number" href="#section2">1250</a></b></p>
+				<p>THREE INTERIOR + EXTERIOR AND ONE COMPLETE SUPERIOR WASH (Ramp Wash) </p>
 	            
 	            </div>				
-				<a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+				<a href="#section2" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
@@ -189,17 +189,13 @@ html {
 	             <br>
 				<div class="pricing-text">
 	         
-	           <p class="price" >INTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">EXTERIOR WASH<b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">REMOVING WATER STAIN <b >&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="#section1">250</a></b></b></p>
-				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="#section1">250</a></b></b></p>
-
-	            
+	                <p class="price col-silver !important" ><b >Sliver Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> </b><b><a class="number" href="#section2">1200</a></b></p>
+				<p>FOUR INTERIOR + EXTERIOR WASH</p>
+				<p class="price col-gold !important"><b >Gold Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  </b><b><a class="number" href="#section2">1400</a></b></p>
+				<p>THREE INTERIOR + EXTERIOR AND ONE COMPLETE SUPERIOR WASH (Ramp Wash) </p>
 	            </div>
 
-	            <a href="#section1" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            <a href="#section2" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
