--- a/carpool/templates/index.html
+++ b/carpool/templates/index.html
@@ -38,12 +38,12 @@ html {
 		{% include 'includes/top.html' %}
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+         
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="fa fa-bars"></span> Menu
 	      </button>
-				
-           		{% if msg == "4"%}
+				<script src="static/js/sweetalert.min.js"></script>
+           	{% if msg == "4" %}
 				       	<script> swal("successfully Loged in","Welcome {{ user}}", "success"); </script>
               {% endif %}
 
@@ -51,13 +51,16 @@ html {
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
 	        	<li class="nav-item active"><a href="/index" class="nav-link">Home</a></li>
-	        	<li class="nav-item"><a href="/about" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="/team" class="nav-link">Team</a></li>
-				<li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
+	        <!--<li class="nav-item"><a href="/about" class="nav-link">About</a></li>-->
+	        	<li class="nav-item"><a href="/gallery" class="nav-link">Gallery</a></li>
+			    	<li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
 	        	<li class="nav-item"><a href="/project" class="nav-link">Project</a></li>
-                   <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
+            {%if user == "praneethjshetty" %}
+            <li class="nav-item"><a href="/bookings" class="nav-link">Bookings</a></li>
+            {% else%}
 	        	<li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
-	  
+            {% endif %}
             
 	        </ul>
 	      </div>
@@ -65,7 +68,7 @@ html {
 	    </div>
        
 	  </nav>
-    <!-- END nav -->
+   <!-- END nav -->
     {% include 'includes/landing.html' %}
 
     {% include 'includes/service.html' %}
