--- a/carpool/templates/login.html
+++ b/carpool/templates/login.html
@@ -126,7 +126,7 @@
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
 
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="static/js/sweetalert.min.js"></script>
 					<h3 id="form-title">LOGIN</h3>
 				</div>
 				{% if msg == "0" %}
