--- a/carpool/templates/Signup.html
+++ b/carpool/templates/Signup.html
@@ -151,7 +151,7 @@
 	</style>
   </head>
   <body>
-   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 <div class="notify"><span id="notifyType" class=""></span></div>
 	  {% include 'includes/top1.html' %}
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -180,14 +180,16 @@
 		
 			<div class="user_cardd">
 				<div class="d-flex justify-content-center">
-
+ <script src="static/js/sweetalert.min.js"></script>
 
 					<h3 id="form-title">Sign Up</h3>
 				</div>
-				{% if msg == "0" %}
+				{% if msg == "exits" %}
 					<script> swal("Oops !","Username or Car Alredy registered Helps check", "error"); </script>
-				{% elif msg == "1"%}
+				{% elif msg == "success"%}
 					<script> swal("Done !","successfully registered", "success"); </script>
+				{% elif msg == "singinternet"%}
+					<script> swal("Done ! successfully registered","But unable to send mail of account details. Please Check Internet Connection", "success"); </script>
 				{% endif %}
 				<div class="d-flex justify-content-center form_container">
 					<form method="POST" action="/user">
