--- a/carpool/templates/bookings.html
+++ b/carpool/templates/bookings.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <title>Car Pool</title>
-       <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="static/images/carpoollog.jpeg">
     {% load static %}
-	 <meta charset="utf-8">
+	  <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <link rel="shortcut icon" type="image/x-icon" href="static/images/carpoollog.jpeg">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900display=swap" rel="stylesheet">
+
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
  
@@ -23,13 +22,8 @@
 
     <link rel="stylesheet" href="static/css/flaticon.css">
     <link rel="stylesheet" href="static/css/style.css">
-	<style>
-html {
-  scroll-behavior: smooth;
-}
-</style>
 
-	</head>
+  </head>
   <body>
 		{% include 'includes/top.html' %}
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
@@ -38,35 +32,47 @@ html {
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="fa fa-bars"></span> Menu
 	      </button>
-				<form action="" class="searchform order-lg-last">
+				<form action="#" class="searchform order-lg-last">
           <div class="form-group d-flex">
             <input type="text" class="form-control pl-3" placeholder="Search">
             <button type="submit" placeholder="" class="form-control search"><span class="fa fa-search"></span></button>
           </div>
-            
         </form>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
-	        <li class="nav-item "><a href="/index" class="nav-link">Home</a></li>
+	        	<li class="nav-item "><a href="/index" class="nav-link">Home</a></li>
 	        <!--<li class="nav-item"><a href="/about" class="nav-link">About</a></li>-->
-	        	<li class="nav-item"><a href="/gallery" class="nav-link">Gallery</a></li>
-			    	<li class="nav-item "><a href="/services" class="nav-link">Services</a></li>
+	        	<li class="nav-item "><a href="/gallery" class="nav-link">Gallery</a></li>
+			    	<li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
 	        	<li class="nav-item"><a href="/project" class="nav-link">Project</a></li>
             <li class="nav-item"><a href="/contact" class="nav-link">Contact</a></li>
             {%if user == "praneethjshetty" %}
-            <li class="nav-item"><a href="/bookings" class="nav-link">Bookings</a></li>
+            <li class="nav-item active"><a href="/bookings" class="nav-link">Bookings</a></li>
             {% else%}
-	        	<li class="nav-item active"><a href="/profile" class="nav-link">Profile</a></li>
+	        	<li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
             {% endif %}
 	        </ul>
 	      </div>
 	    </div>
 	  </nav>
     <!-- END nav -->
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row no-gutters slider-text align-items-end">
+          <div class="col-md-9 ftco-animate pb-5">
+          	<p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="fa fa-chevron-right"></i></a></span> <span>bookings <i class="fa fa-chevron-right"></i></span></p>
+            <h1 class="mb-0 bread">Our bookings</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+
     
+    
+       {% include 'includes/bookings.html' %}
     
     <!--{% include 'includes/blog.html' %}-->
-    {% include 'includes/profile.html' %}
   
     {% include 'includes/footer.html' %}
   
@@ -75,7 +81,7 @@ html {
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
-  <script src="static/js/jquery.min.js"></script>
+ <script src="static/js/jquery.min.js"></script>
   <script src="static/js/jquery-migrate-3.0.1.min.js"></script>
   <script src="static/js/popper.min.js"></script>
   <script src="static/js/bootstrap.min.js"></script>
