--- a/carpool/templates/contact.html
+++ b/carpool/templates/contact.html
@@ -38,13 +38,17 @@
         </form>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav mr-auto">
-	        	<li class="nav-item "><a href="/index" class="nav-link">Home</a></li>
-	        	<li class="nav-item"><a href="/about" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="/team" class="nav-link">Team</a></li>
-				<li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
+		<li class="nav-item "><a href="/index" class="nav-link">Home</a></li>
+	        <!--<li class="nav-item"><a href="/about" class="nav-link">About</a></li>-->
+	        	<li class="nav-item"><a href="/gallery" class="nav-link">Gallery</a></li>
+			    	<li class="nav-item"><a href="/services" class="nav-link">Services</a></li>
 	        	<li class="nav-item"><a href="/project" class="nav-link">Project</a></li>
-	        	<li class="nav-item"><a href="/blog" class="nav-link">Blog</a></li>
-	          <li class="nav-item active"><a href="/contact" class="nav-link">Contact</a></li>
+            <li class="nav-item active"><a href="/contact" class="nav-link">Contact</a></li>
+            {%if user == "praneethjshetty" %}
+            <li class="nav-item"><a href="/bookings" class="nav-link">Bookings</a></li>
+            {% else%}
+	        	<li class="nav-item"><a href="/profile" class="nav-link">Profile</a></li>
+            {% endif %}
 	        </ul>
 	      </div>
 	    </div>
