--- a/carpool/templates/includes/book.html
+++ b/carpool/templates/includes/book.html
@@ -15,12 +15,14 @@ html {
            color: red;
 		}
 </style>
-	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img boo" style="background-image: url(static/images/book1.jpg) ">
+<section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img boo" style="background-image: url(static/images/book1.jpg)">
+	
+    <section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img boo">
 			<div class="overlay"  id="section1"></div>
     	<div class="container">
     		<div class="row d-md-flex justify-content-end">
     			<div class="col-md-12 col-lg-6 half p-3 py-5 pl-lg-5 ftco-animate heading-section heading-section-white">
+				<script src="static/js/sweetalert.min.js"></script>
 				{% if msg == "0" %}
 					<script> swal("Invalid Register number","Please Enter a valid Register number", "error"); </script>
 				{% elif msg == "1"%}
@@ -29,9 +31,13 @@ html {
 					<script> swal("Oops !","Appointment Unsuccessfully", "error");</script>
 				{% elif msg == "3"%}
 					<script> swal("Invalid Date Selected","Please select proper date", "error"); </script>
+				{% elif msg == "appinternet"%}
+					<script> swal("Done ! Appointment successfully ","But unable to send mail. Please Check Internet Connection", "success"); </script>
+				{% elif msg == "packinternet"%}
+					<script> swal("Done ! successfully Booked the Package ","But unable to send mail. Please Check Internet Connection", "success"); </script>
 				{% endif %}
 
-    				<span class="subheading">Booking an Appointment</span><br>
+    				<span class="subheading">TO Booking an Appointment</span><br>
     				<form action="/book" class="appointment"  method="POST">
                         {% csrf_token %}
     					<div class="row">
@@ -42,7 +48,7 @@ html {
 	                      <div class="icon"><span class="fa fa-chevron-down"></span></div>
 	                      <select name="service" id="service" class="form-control" required>
                           <option value="">Select service </option>
-	                      	<option value="INTERIOR + EXTERIOR WASH">INTERIOR WASH</option>
+	                      	<option value="INTERIOR + EXTERIOR WASH">INTERIOR + EXTERIOR WASH</option>
 	                        <option value="COMPLETE SUPERIOR WASH">COMPLETE SUPERIOR WASH</option>
 	                        <option value="REMOVING HARD WATER STAIN">REMOVING HARD WATER STAIN</option>
 	                        <option value="INTERIOR DETAILING">INTERIOR DETAILING</option>
@@ -59,7 +65,71 @@ html {
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
-			              <input type="text" name="regno" id="regno"  class="form-control" placeholder="Vehicle number" required>
+			              <input type="text" name="regno" id="regno"  class="form-control" placeholder="Reg No Ex:(KA-19-MF-2020)" required>
+			            </div>
+								</div>
+							
+								<div class="col-md-6">
+									<div class="form-group">
+			    					<div class="input-wrap">
+			            		<div class="icon"><span class="fa fa-calendars"></span></div>
+			            		<input type="date" name="date" id="date" class="form-control appointment" placeholder="Date" required>
+		            		</div>
+			    				</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+			    					<div class="input-wrap">
+			            		<div class="icon"><span class="fa fa-clock-os"></span></div>
+						  
+			            		<input type="time"  min="08:00" max="18:00" name="time" id="time" class="form-control appointment" placeholder="Time" required> &nbsp;&nbsp; <small><b>Service hours are 8.30 am to 6.00pm</b></small>
+		            		</div>
+			    				</div>
+								</div>
+								<div class="col-md-12">
+									<div class="form-group">
+			              <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Message (Instructions)" required></textarea>
+			            </div>
+								</div>
+								<div class="col-md-12">
+									<div class="form-group">
+			              <input type="submit" value="Submit" class="btn btn-dark py-3 px-4">
+			            </div>
+								</div>
+    					</div>
+	          </form><br><br><br><br>
+			  </section>
+			  <section class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img boo"  >
+			<div class="overlay"  id="section2"></div>
+			<div class="container">
+    		<div class="row d-md-flex justify-content-end">
+    			<div class="col-md-12 col-lg-6 half p-3 py-5 pl-lg-5 ftco-animate heading-section heading-section-white">
+			  <span class="subheading">To Book a Monthly subscription</span><br>
+    				<form action="/packbook" class="appointment"  method="POST">
+                        {% csrf_token %}
+    					<div class="row">
+    						<div class="col-md-12">
+									<div class="form-group">
+			    					<div class="form-field">
+	          					<div class="select-wrap">
+	                      <div class="icon"><span class="fa fa-chevron-down"></span></div>
+	                      <select name="package" id="package" class="form-control" required>
+                          <option value="">Select Package </option>
+	                      	<option value="SLIVER PACKAGE">SLIVER PACKAGE</option>
+	                        <option value="GOLD PACKAGE">GOLD PACKAGE</option>
+	                    </select>
+	                    </div>
+			              </div>
+			    				</div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+			              <input type="text" name="name" id="name" class="form-control" placeholder="Your Name"  required>
+			            </div>
+								</div>
+								<div class="col-md-6">
+									<div class="form-group">
+			              <input type="text" name="regno" id="regno"  class="form-control" placeholder="Reg No Ex:(KA-19-MF-2020)" required>
 			            </div>
 								</div>
 							
@@ -96,4 +166,4 @@ html {
     		</div>
     	</div>
     </section>
-	
+	  </section>
