--- a/carpool/templates/includes/bprice.html
+++ b/carpool/templates/includes/bprice.html
@@ -1,3 +1,15 @@
+	<style>
+html {
+  scroll-behavior: smooth;
+
+}
+.col-silver{
+	color:#676767
+}
+.col-gold{
+	color:#b8860b
+}
+	</style>
   <section class="ftco-section bg-light">
     	<div class="container">
     		<div class="row justify-content-center pb-5 mb-3">
@@ -7,14 +19,65 @@
           </div>
         </div>
     		<div class="row">
+			<div class="col-md-6 col-lg-3 ftco-animate">
+	          <div class="block-7">
+			   <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/hbb1.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">HATCHBACK</span>
+				<br>
+				<div class="pricing-text">
+	         
+	     		<p class="price" >INTERIOR+EXTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="login">370</a></b></b></p>
+				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="login">350</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="login">250</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="login">2000</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="login">3300</a></b></b></p>
+	            </div>
+
+	            <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            </div>
+	          </div>
+	        </div>
     			<div class="col-md-6 col-lg-3 ftco-animate">
 	          <div class="block-7">
-	            <div class="text-center">
-            	<span class="excerpt d-block">First PMS</span>
-	            <span class="price"><sup>$</sup> <span class="number">78.98</span></span>
+			  <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/sedann.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">SEDAN</span>
+	           <br>
+				<div class="pricing-text">
+	         
+				<p class="price" >INTERIOR+EXTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="login">370</a></b></b></p>
+				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="login">400</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="login">250</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="login">2500</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="login">3500</a></b></b></p>
+
 	            
-	            <div class="pricing-text">
-	              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+	            </div>
+	          <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            </div>
+	          </div>
+	        </div>
+	        
+	        <div class="col-md-6 col-lg-3 ftco-animate">
+	          <div class="block-7">
+			  <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/msuv.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">COMPACT SUV</span>
+	             <br>
+				<div class="pricing-text">
+	         
+	            <p class="price" >INTERIOR+EXTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="login">370</a></b></b></p>
+				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="login">430</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="login">300</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="login">3000</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="login">3800</a></b></b></p>
 	            </div>
 
 	            <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
@@ -23,46 +86,121 @@
 	        </div>
 	        <div class="col-md-6 col-lg-3 ftco-animate">
 	          <div class="block-7">
-	            <div class="text-center">
-            	<span class="excerpt d-block">Engine Diagnostics</span>
-	            <span class="price"><sup>$</sup> <span class="number">83.75</span></span>
+			  <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/suv.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">SUV</span>
+	            <br>
+				<div class="pricing-text">
+	         
+	           <p class="price" >INTERIOR+EXTERIOR WASH <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="login">370</a></b></b></p>
+				<p class="price">COMPLETE SUPERIOR WASH <b >&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="login">350</a></b></b></p>
+				<p class="price">REMOVING WATER STAIN <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  <b><a class="number" href="login">300</a></b></b></p>
+				<p class="price">INTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup><b><a class="number" href="login">4000</a></b></b></p>
+				<p class="price">EXTERIOR DETAILING <b >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> <b><a class="number" href="login">4500</a></b></b></p>
+
 	            
-	            <div class="pricing-text">
-	              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 	            </div>
 
-	            <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	           <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            </div>
+	          </div>
+	        </div>
+			</div>
+				<div class="row justify-content-center pb-5 mb-3">
+          <div class="col-md-7 heading-section text-center ftco-animate">
+        	
+            <h2> Monthly subscriptions</h2>
+          </div>
+        </div>
+    		<div class="row">
+			<div class="col-md-6 col-lg-3 ftco-animate">
+	          <div class="block-7">
+			   <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/hbb1.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">HATCHBACK</span>
+	             <br>
+				<div class="pricing-text">
+	         
+	            <p class="price col-silver !important" ><b >Sliver Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> </b><b><a class="number" href="login">750</a></b></p>
+				<p>FOUR INTERIOR + EXTERIOR WASH</p>
+				<p class="price col-gold !important"><b >Gold Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  </b><b><a class="number" href="login">950</a></b></p>
+				<p>THREE INTERIOR + EXTERIOR AND ONE COMPLETE SUPERIOR WASH (Ramp Wash) </p>
+
+	            
+	            </div>
+
+	           <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            </div>
+	          </div>
+	        </div>
+    			<div class="col-md-6 col-lg-3 ftco-animate">
+	          <div class="block-7">
+			  <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/sedann.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">SEDAN</span>
+	            <br>
+				<div class="pricing-text">
+	         
+	             <p class="price col-silver !important" ><b >Sliver Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> </b><b><a class="number" href="login">900</a></b></p>
+				<p>FOUR INTERIOR + EXTERIOR WASH</p>
+				<p class="price col-gold !important"><b >Gold Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  </b><b><a class="number" href="login">1110</a></b></p>
+				<p>THREE INTERIOR + EXTERIOR AND ONE COMPLETE SUPERIOR WASH (Ramp Wash) </p>
+
+	            </div>
+
+	           <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
+	            </div>
+	          </div>
+	        </div>
+	        
+	        <div class="col-md-6 col-lg-3 ftco-animate">
+	          <div class="block-7">
+			  <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/msuv.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">COMPACT SUV</span>
+	             <br>
+				<div class="pricing-text">
+	         
+	             <p class="price col-silver !important" ><b >Sliver Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> </b><b><a class="number" href="login">1050</a></b></p>
+				<p>FOUR INTERIOR + EXTERIOR WASH</p>
+				<p class="price col-gold !important"><b >Gold Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  </b><b><a class="number" href="login">1250</a></b></p>
+				<p>THREE INTERIOR + EXTERIOR AND ONE COMPLETE SUPERIOR WASH (Ramp Wash) </p>
+	            
+	            </div>				
+				<a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
 	        <div class="col-md-6 col-lg-3 ftco-animate">
 	          <div class="block-7">
-	            <div class="text-center">
-            	<span class="excerpt d-block">Tow Truck</span>
-	            <span class="price"><sup>$</sup> <span class="number">85.00</span></span>
-	            
-	            <div class="pricing-text">
-	              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+			  <div class="icon d-flex justify-content-center align-items-left">
+            		<span > <img src="static/images/suv.png" height="100px" width="150px"></img></span>
+              </div>
+	            <div >
+            	<span class="excerpt d-block text-center">SUV</span>
+	             <br>
+				<div class="pricing-text">
+	         
+	                <p class="price col-silver !important" ><b >Sliver Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup> </b><b><a class="number" href="login">1200</a></b></p>
+				<p>FOUR INTERIOR + EXTERIOR WASH</p>
+				<p class="price col-gold !important"><b >Gold Package &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<sup>Rs</sup>  </b><b><a class="number" href="login">1400</a></b></p>
+				<p>THREE INTERIOR + EXTERIOR AND ONE COMPLETE SUPERIOR WASH (Ramp Wash) </p>
 	            </div>
 
 	            <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
 	            </div>
 	          </div>
 	        </div>
-	        <div class="col-md-6 col-lg-3 ftco-animate">
-	          <div class="block-7">
-	            <div class="text-center">
-            	<span class="excerpt d-block">Car Wash</span>
-	            <span class="price"><sup>$</sup> <span class="number">30.50</span></span>
-	            
-	            <div class="pricing-text">
-	              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-	            </div>
-
-	            <a href="login" class="btn btn-secondary d-block px-2 py-3">Get Started</a>
-	            </div>
-	          </div>
-	        </div>
+				<div class="row justify-content-center pb-5 mb-3">
+          <div class="col-md-7 heading-section text-center ftco-animate">
 	      </div>
     	</div>
     </section>
